<resources>
    <string name="app_name">OPTIMUZ</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="login_heading">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="button">Save</string>
    <string name="logout_button">Logout</string>
    <string name="account_button">My account</string>
    <string name="register_heading">Register</string>
    <string name="medicine_button">my medicines</string>
    <string name="title_medication">Medication</string>
    <string name="title_news">News</string>
    <string name="title_questionnaire">Questionnaire</string>
    <string name="title_profile">Profile</string>
    <!-- https://studyskills.southwales.ac.uk/maths/mathematics-learning-resources/maths-topic-locator-numbers/units-measurement-drug-calculations/-->
    <string-array name="medicine_units">
        <item>Kg</item>
        <item>g</item>
        <item>mg</item>
        <item>mcg</item>
        <item>L</item>
        <item>ml</item>
        <item>cc</item>
        <item>mol</item>
        <item>mmol</item>
    </string-array>
</resources>