<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_medication"
        android:icon="@drawable/ic_pills"
        android:title="@string/title_medication" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_questionnaire"
        android:icon="@drawable/ic_quiz_24dp"
        android:title="@string/title_questionnaire" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_circle"
        android:title="@string/title_profile" />

</menu>